Update Maven configuration